...
                                <rect key="frame" x="87" y="305" width="200" height="30"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="ANf-YP-eDJ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="btnLoginTapped:" destination="HyV-vx-oHO" eventType="touchUpInside" id="x3o-8v-lKm"/>
                                </connections>
                            </button>
...
